fix spacing on mobile layout

--- a/narrow.css
+++ b/narrow.css
@@ -155,5 +155,5 @@ iframe {
 }
 
 .spacer {
-	height: 20vh;
+	height: 5vh;
 }
